[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/song_end_screen/result_label.gd" type="Script" id=2]
[ext_resource path="res://assets/Playpen_Sans/static/PlaypenSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/font/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/scene_link_button/scene_link_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/song_end_screen.gd" type="Script" id=6]
[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/Playpen_Sans/PlaypenSans-VariableFont_wght.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=6]
Label/fonts/font = SubResource( 5 )

[node name="SongEndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -80.0
margin_top = -64.0
margin_right = 1088.0
margin_bottom = 640.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 440.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 4 )
text = "Song Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 136.0
margin_right = 376.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "Perfect:
Good:
Miss:"
valign = 1
clip_text = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneLinkButton" parent="." instance=ExtResource( 5 )]
margin_left = 312.0
margin_top = 384.0
margin_right = 735.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 3 )
text = "Back To Main Menu"
flat = true
scene = "res://scenes/main_menu.tscn"

[node name="AutoModeNotice" type="Label" parent="."]
margin_left = 680.0
margin_top = 8.0
margin_right = 1006.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "Auto Mode Enabled!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 328.0
margin_top = 136.0
margin_right = 1008.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 680.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitRate" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 224.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Hit Rate:"

[node name="Rating" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 452.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Rating:"

[node name="Grade" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 456.0
margin_right = 680.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Grade:"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 680.0
margin_bottom = 176.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitRateResult" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 43.0
margin_right = 224.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )

[node name="RatingResult" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 228.0
margin_top = 43.0
margin_right = 452.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )

[node name="GradeResult" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 456.0
margin_top = 43.0
margin_right = 680.0
margin_bottom = 86.0
size_flags_horizontal = 3
theme = SubResource( 6 )
custom_fonts/font = ExtResource( 7 )
